# G5_Grafos_EDA2-2026.1

./: .gitignore  CMakeLists.txt  README.md
src/: main  main.cpp
src/Visualization/: MazeRenderer.cpp
src/include/Algoritmos/: AlgoritmoDeBusca.h  BFS.h  ComponentesConectados.h  DFS.h  Dijkstra.h  GrafoReverso.h
src/include/EstruturasDeDados/: Fila.h  FilaDePrioridade.h  Pilha.h  VetorDinamico.h
src/include/Grafo/: Grafo.h
src/include/Labirinto/: Labirinto.h  MazeGenerator.h
src/include/Utils/: Timer.h
src/include/Visualizacao/: MazeRenderer.h
